<resources>
    <string name="app_name">parkUŚ</string>
    <string name="title_activity_main_map">Map</string>
    <string name="network_error_no_code">OnFailure</string>
    <string name="encountered_problem">Napotkano problem</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="cancel">Anuluj</string>
    <string name="parking_place">Wolne miejsce</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="register">Załóż konto</string>
    <string name="add">Dodaj</string>
    <string name="welcome">Witaj w aplikacji parkUŚ!</string>
    <string name="name">Imie</string>
    <string name="surname">Nazwisko</string>
    <string name="register2">Dodawanie konta</string>
    <string name="user_created">Konto zostało utworzone</string>
    <string name="user_not_created">Wystąpił błąd podczas tworzenia nowego konta. Być może taki użytkownik już istnieje.</string>
    <string name="ok">Ok</string>
    <string name="login2">Logowanie</string>
    <string name="login_error">Błędny login lub hasło</string>
    <string name="empty_fields">Uzupełnij wszystkie pola</string>
    <string name="user_points">Posiadasz %d punktów</string>
</resources>
